bad requests, some other stuff

--- a/Selecteds/error-404.html
+++ b/Selecteds/error-404.html
@@ -8,8 +8,7 @@
   <meta name="description" content="Modern admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities with bitcoin dashboard.">
   <meta name="keywords" content="admin template, modern admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard">
   <meta name="author" content="PIXINVENT">
-  <title>Error 404 - Modern Admin - Clean Bootstrap 4 Dashboard HTML Template + Bitcoin
-    Dashboard
+  <title>Error 404 | Bloodbank
   </title>
   <link rel="apple-touch-icon" href="app-assets/images/ico/apple-icon-120.png">
   <link rel="shortcut icon" type="image/x-icon" href="app-assets/images/ico/favicon.ico">
@@ -48,29 +47,17 @@
                 <h3 class="text-uppercase text-center">Page Not Found !</h3>
               </div>
               <div class="card-content">
-                <fieldset class="row py-2">
-                  <div class="input-group col-12">
-                    <input type="text" class="form-control form-control-xl input-xl border-grey border-lighten-1 "
-                      placeholder="Search..." aria-describedby="button-addon2">
-                    <span class="input-group-append" id="button-addon2">
-                      <button class="btn btn-lg btn-secondary border-grey border-lighten-1" type="button"><i class="ft-search"></i></button>
-                    </span>
-                  </div>
-                </fieldset>
+              
                 <div class="row py-2">
-                  <div class="col-12 col-sm-6 col-md-6">
-                    <a href="index.html" class="btn btn-primary btn-block"><i class="ft-home"></i> Back to Home</a>
+                  <div class="col-12 col-sm-12 col-md-12">
+                    <a href="/" class="btn btn-primary btn-block"><i class="ft-home"></i> Back to Home</a>
                   </div>
-                  <div class="col-12 col-sm-6 col-md-6">
-                    <a href="search-website.html" class="btn btn-danger btn-block"><i class="ft-search"></i> Advanced
-                      search</a>
-                  </div>
+                 
                 </div>
               </div>
               <div class="card-footer bg-transparent">
                 <div class="row">
-                  <p class="text-muted text-center col-12 py-1">© 2018 <a href="#">Modern </a>Crafted with <i class="ft-heart pink">
-                    </i> by <a href="http://themeforest.net/user/pixinvent/portfolio" target="_blank">PIXINVENT</a></p>
+                  <p class="text-muted text-center col-12 py-1">Bloodbank © 2018</p>
                   <div class="col-12 text-center">
                     <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-facebook">
                       <span class="la la-facebook"></span>
