--- a/Selecteds/under-maintenance.html
+++ b/Selecteds/under-maintenance.html
@@ -8,8 +8,7 @@
   <meta name="description" content="Modern admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities with bitcoin dashboard.">
   <meta name="keywords" content="admin template, modern admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard">
   <meta name="author" content="PIXINVENT">
-  <title>Under Maintenance - Modern Admin - Clean Bootstrap 4 Dashboard HTML Template +
-    Bitcoin Dashboard</title>
+  <title>Under Maintenance | Bloodbank</title>
   <link rel="apple-touch-icon" href="app-assets/images/ico/apple-icon-120.png">
   <link rel="shortcut icon" type="image/x-icon" href="app-assets/images/ico/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700"
@@ -45,7 +44,7 @@
               <div class="card border-grey border-lighten-3 px-1 py-1 box-shadow-3 m-0">
                 <div class="card-body">
                   <span class="card-title text-center">
-                    <img src="app-assets/images/logo/logo-dark-lg.png"
+                    <img src="logo_final.png"
                       class="img-fluid mx-auto d-block pt-2" width="250" alt="logo">
                   </span>
                 </div>
