recover password page

--- a/Selecteds/recover-password.html
+++ b/Selecteds/recover-password.html
@@ -8,8 +8,7 @@
   <meta name="description" content="Modern admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities with bitcoin dashboard.">
   <meta name="keywords" content="admin template, modern admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard">
   <meta name="author" content="PIXINVENT">
-  <title>Recover Password - Modern Admin - Clean Bootstrap 4 Dashboard HTML Template + Bitcoin
-    Dashboard
+  <title>Recover Password | Bloodbank
   </title>
   <link rel="apple-touch-icon" href="app-assets/images/ico/apple-icon-120.png">
   <link rel="shortcut icon" type="image/x-icon" href="app-assets/images/ico/favicon.ico">
@@ -45,8 +44,8 @@
               <div class="card border-grey border-lighten-3 px-2 py-2 m-0">
                 <div class="card-header border-0 pb-0">
                   <div class="card-title text-center">
-                    <img src="app-assets/images/logo/logo-dark.png"
-                      alt="branding logo">
+                    <img src="logo_final.png"
+                      alt="branding logo" height="120px">
                   </div>
                   <h6 class="card-subtitle line-on-side text-muted text-center font-small-3 pt-2">
                     <span>We will send you a link to reset password.</span>
@@ -69,7 +68,7 @@
                 </div>
                 <div class="card-footer border-0">
                   <p class="float-sm-left text-center"><a href="login-simple.html" class="card-link">Login</a></p>
-                  <p class="float-sm-right text-center">New to Modern ? <a href="register-simple.html" class="card-link">Create
+                  <p class="float-sm-right text-center">New to here ? <a href="register-simple.html" class="card-link">Create
                       Account</a></p>
                 </div>
               </div>
