fixed navigation menu hrefs

--- a/Selecteds/dashboard-sales.html
+++ b/Selecteds/dashboard-sales.html
@@ -280,12 +280,12 @@
             <li class=" nav-item"><a href="#"><i class="ft-camera"></i><span class="menu-title" data-i18n="nav.templates.main">Gallery</span></a>
               <ul class="menu-content">
                 <li>
-                 <a href="/profile"><i class="ft-image"></i><span class="menu-item"
+                 <a href="/view-photo"><i class="ft-image"></i><span class="menu-item"
                   data-i18n="nav.animation.main">View Photos</span></a>
                  
                 </li>
                 <li>
-                 <a href="/edit-profile"><i class="ft-upload-cloud"></i><span class="menu-item"
+                 <a href="/upload-photo"><i class="ft-upload-cloud"></i><span class="menu-item"
                   data-i18n="nav.animation.main">Upload Photos</span></a>
                  
                 </li>
@@ -347,7 +347,7 @@
                 data-placement="right" data-original-title="General Information"></i>
             </li>
 
-            <li class=" nav-item"><a href="/search"><i class="ft-droplet"></i><span class="menu-title"
+            <li class=" nav-item"><a href="/about-blood-types"><i class="ft-droplet"></i><span class="menu-title"
                   data-i18n="nav.animation.main">About Blood Types</span></a>
             </li>
 
