--- a/Selecteds/user-profile.html
+++ b/Selecteds/user-profile.html
@@ -1703,7 +1703,7 @@
                         <button type="button" class="btn btn-primary d-"><i class="la la-plus"></i> Follow</button>
                         <div class="btn-group d-none d-md-block float-right ml-2" role="group" aria-label="Basic example">
                           <button type="button" class="btn btn-success"><i class="la la-dashcube"></i> Message</button>
-                          <button type="button" class="btn btn-success"><i class="la la-cog"></i></button>
+                         
                         </div>
                       </div>
                     </div>
@@ -1716,20 +1716,18 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                          <a class="nav-link" href="#"><i class="la la-line-chart"></i> Timeline <span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="#"><i class="ft-clock"></i> Timeline <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#"><i class="la la-user"></i> Profile</a>
+                          <a class="nav-link" href="#"><i class="ft-user"></i> Profile</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#"><i class="la la-briefcase"></i> Projects</a>
+                          <a class="nav-link" href="#"><i class="ft-heart"></i> Donations </a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#"><i class="la la-heart-o"></i> Favourites</a>
+                          <a class="nav-link" href="#"><i class="ft-image"></i> Gallery</a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#"><i class="la la-bell-o"></i> Notifications</a>
-                        </li>
+                       
                       </ul>
                     </div>
               </div>
