added blood bank logo to the sign in page

--- a/Selecteds/register-with-bg-image.html
+++ b/Selecteds/register-with-bg-image.html
@@ -46,7 +46,7 @@
               <div class="card border-grey border-lighten-3 px-1 py-1 m-0">
                 <div class="card-header border-0 pb-0">
                   <div class="card-title text-center">
-                    <img src="logo_final.png" alt="branding logo" height="100px">
+                    <img src="logo_final.png" alt="Blood Bank" height="100px">
                   </div>
                   <h6 class="card-subtitle line-on-side text-muted text-center font-small-3 pt-2">
                     <span>Easily Using</span>
