error pages recreated

--- a/Selecteds/error-404.html
+++ b/Selecteds/error-404.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" type="text/css" href="app-assets/css/core/menu/menu-types/vertical-content-menu.css">
   <link rel="stylesheet" type="text/css" href="app-assets/css/core/colors/palette-gradient.css">
   <link rel="stylesheet" type="text/css" href="app-assets/css/pages/error.css">
+  <link rel="stylesheet" type="text/css" href="app-assets/css/newerror.css">
   <!-- END Page Level CSS-->
   <!-- BEGIN Custom CSS-->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -39,6 +40,21 @@
       <div class="content-header row">
       </div>
       <div class="content-body">
+
+
+          <h1>Error 404</h1>
+
+          
+
+          <div class="frame">
+              <div></div>
+              <div></div>
+              <div></div>
+          </div>
+          <div class="caps"></div>
+          <canvas id="canvas"></canvas>
+
+<!--           
         <section class="flexbox-container">
           <div class="col-12 d-flex align-items-center justify-content-center">
             <div class="col-md-4 col-10 p-0">
@@ -76,7 +92,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
       </div>
     </div>
   </div>
@@ -92,6 +108,7 @@
   <!-- BEGIN MODERN JS-->
   <script src="app-assets/js/core/app-menu.js" type="text/javascript"></script>
   <script src="app-assets/js/core/app.js" type="text/javascript"></script>
+  <script src="app-assets/js/scripts/newerror.js" type="text/javascript"></script>
   <!-- END MODERN JS-->
   <!-- BEGIN PAGE LEVEL JS-->
   <script src="app-assets/js/scripts/forms/form-login-register.js"
