--- a/Selecteds/error-400.html
+++ b/Selecteds/error-400.html
@@ -28,6 +28,8 @@
   <!-- END Page Level CSS-->
   <!-- BEGIN Custom CSS-->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+  <link rel="stylesheet" type="text/css" href="app-assets/css/newerror.css">
   <!-- END Custom CSS-->
 </head>
 
@@ -39,7 +41,21 @@
       <div class="content-header row">
       </div>
       <div class="content-body">
-        <section class="flexbox-container">
+
+        
+          <h1>Error 400</h1>
+
+          
+
+          <div class="frame">
+              <div></div>
+              <div></div>
+              <div></div>
+          </div>
+          <div class="caps"></div>
+          <canvas id="canvas"></canvas>
+
+        <!-- <section class="flexbox-container">
           <div class="col-12 d-flex align-items-center justify-content-center">
             <div class="col-md-4 col-10 p-0">
               <div class="card-header bg-transparent border-0">
@@ -76,7 +92,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
       </div>
     </div>
   </div>
@@ -96,6 +112,8 @@
   <!-- BEGIN PAGE LEVEL JS-->
   <script src="app-assets/js/scripts/forms/form-login-register.js"
     type="text/javascript"></script>
+
+    <script src="app-assets/js/scripts/newerror.js" type="text/javascript"></script>
   <!-- END PAGE LEVEL JS-->
 </body>
 
